--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@tanstack/react-query": "^5.83.1",
     "firebase": "^12.0.0",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
